# portfolio-be

./: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0aabea5968e1_create_users_table.py  e210ec86766e_initial_migration.py
scripts/: run.sh
src/: .dockerignore  main.py
src/api/: api_router.py
src/api/v1/: auth_router.py  contact_router.py
src/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
src/models/: user_model.py
src/repositories/: user_repo.py
src/schemas/: auth_schema.py  common_schema.py  contact_schema.py  user_schema.py
src/services/: auth_service.py  contact_service.py  email_service.py
src/templates/: contact_template.py
