[project]
name = "portfolio-website-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.43.51",
    "fastapi[standard]>=0.139.2",
    "gunicorn>=26.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
